turtleart.flower.Flower.scala.error
Compilation error:
Flower:6: error: not found: value lef
  lef(45)
  ^